[gd_scene load_steps=6 format=2]

[ext_resource path="res://arts/icons.png" type="Texture" id=1]
[ext_resource path="res://assets/main_color_selector/circle_selector/color_circle_shader.tres" type="Material" id=2]
[ext_resource path="res://assets/main_color_selector/circle_selector/color_circle.gd" type="Script" id=3]
[ext_resource path="res://assets/main_color_selector/circle_selector/circle_selector.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 15, 10, 5, 5 )

[node name="HBoxContainer" type="HBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 146.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
margin_right = 119.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorCircle" type="ColorRect" parent="AspectRatioContainer"]
material = ExtResource( 2 )
margin_top = 5.5
margin_right = 119.0
margin_bottom = 124.5
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="TextureRect" parent="AspectRatioContainer/ColorCircle"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 2.5, 2.5 )
mouse_filter = 2
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSlider" type="VSlider" parent="."]
margin_left = 123.0
margin_right = 139.0
margin_bottom = 130.0
step = 0.0
value = 100.0

[connection signal="item_rect_changed" from="AspectRatioContainer/ColorCircle" to="AspectRatioContainer/ColorCircle" method="_on_ColorCircle_item_rect_changed"]
[connection signal="pick_color" from="AspectRatioContainer/ColorCircle" to="." method="_on_ColorCircle_pick_color"]
[connection signal="resized" from="AspectRatioContainer/ColorCircle" to="AspectRatioContainer/ColorCircle" method="_on_ColorCircle_resized"]
[connection signal="value_changed" from="VSlider" to="." method="_on_VSlider_value_changed"]
